adds scrolling to list, adds create new note function

--- a/index.html
+++ b/index.html
@@ -10,15 +10,18 @@
 <body>
     <div id="note-list-container">
         <h1>Hot Dog!</h1>
+        <button id="new-note-button" >Create New Note</button>
         <ul id="note-list">
             
         </ul>
     </div>
 
     <div id="note-panel-container">
-        <h1>Edit Plane</h1>
         <div id="note-panel">
+            <h1 id="note-panel-heading"></h1>
+            <form class="form">
 
+            </form>
         </div>
     </div>
 
